FEATURE/jsoup and brute socket impl (#14)
* implemented jsoup library for content parsing

* implemented brute socket logic (#13)

* refactored seach engine

* added cinnection package

* issue done