@@ -2,230 +2,223 @@ package org.c8a.porcessor;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
+import org.jsoup.select.Elements;
 
 import java.util.HashSet;
 import java.util.Set;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 public class ContentProcessor {
 
     public static String extractReadableContent(String html) {
+        if (html == null || html.trim().isEmpty()) {
+            return "No content found";
+        }
+
         StringBuilder result = new StringBuilder();
 
-        String cleanHtml = html.replaceAll("<script[^>]*>[\\s\\S]*?</script>", "");
-        cleanHtml = cleanHtml.replaceAll("<style[^>]*>[\\s\\S]*?</style>", "");
-        cleanHtml = cleanHtml.replaceAll("<nav[^>]*>[\\s\\S]*?</nav>", "");
-        cleanHtml = cleanHtml.replaceAll("<footer[^>]*>[\\s\\S]*?</footer>", "");
-        cleanHtml = cleanHtml.replaceAll("<header[^>]*>[\\s\\S]*?</header>", "");
-        cleanHtml = cleanHtml.replaceAll("<!--[\\s\\S]*?-->", "");
+        try {
+            Document doc = Jsoup.parse(html);
 
-        Pattern titlePattern = Pattern.compile("<title[^>]*>(.*?)</title>", Pattern.DOTALL);
-        Matcher titleMatcher = titlePattern.matcher(cleanHtml);
-        if (titleMatcher.find()) {
-            String title = cleanText(titleMatcher.group(1));
-            if (!title.isBlank()) {
+            doc.select("script, style, iframe, noscript, svg, [style*=display:none], [hidden]").remove();
+
+            String title = doc.title();
+            if (title != null && !title.trim().isEmpty()) {
                 result.append(title).append("\n");
                 result.append(String.valueOf('=').repeat(Math.min(title.length(), 40))).append("\n\n");
             }
-        }
 
-        Pattern mainPattern = Pattern.compile("<main[^>]*>(.*?)</main>", Pattern.DOTALL);
-        Matcher mainMatcher = mainPattern.matcher(cleanHtml);
-        if (mainMatcher.find()) {
-            cleanHtml = mainMatcher.group(1);
-        } else {
-            Pattern articlePattern = Pattern.compile("<article[^>]*>(.*?)</article>", Pattern.DOTALL);
-            Matcher articleMatcher = articlePattern.matcher(cleanHtml);
-            if (articleMatcher.find()) {
-                cleanHtml = articleMatcher.group(1);
+            Element mainContent = findMainContent(doc);
+
+            if (mainContent != null) {
+                processContent(mainContent, result);
+            } else {
+                processContent(doc.body(), result);
+            }
+
+            String finalResult = result.toString().trim();
+            finalResult = finalResult.replaceAll("\n{3,}", "\n\n");
+
+            return finalResult.isEmpty() ? "Could not extract readable content" : finalResult;
+
+        } catch (Exception e) {
+            return "Error processing HTML: " + e.getMessage();
+        }
+    }
+
+    private static Element findMainContent(Document doc) {
+        String[] contentSelectors = {
+                "main", "article", "div.content", "div.article", "div.post",
+                "div.main-content", "div#content", "div#main", "div#article",
+                "div.entry-content", ".post-content", ".entry", ".article-body"
+        };
+
+        for (String selector : contentSelectors) {
+            Elements elements = doc.select(selector);
+            if (!elements.isEmpty()) {
+                Element bestElement = null;
+                int maxTextLength = 0;
+
+                for (Element element : elements) {
+                    String text = element.text();
+                    if (text.length() > maxTextLength) {
+                        maxTextLength = text.length();
+                        bestElement = element;
+                    }
+                }
+
+                if (bestElement != null && maxTextLength > 100) {
+                    return bestElement;
+                }
             }
         }
 
+        Elements divs = doc.select("div");
+        Element bestDiv = null;
+        int maxTextLength = 0;
+
+        for (Element div : divs) {
+            if (div.select("div").size() < 3) {
+                String text = div.text();
+                if (text.length() > maxTextLength) {
+                    maxTextLength = text.length();
+                    bestDiv = div;
+                }
+            }
+        }
+
+        return (bestDiv != null && maxTextLength > 200) ? bestDiv : null;
+    }
+
+    private static void processContent(Element element, StringBuilder result) {
+        if (element == null) return;
+
+        processHeadings(element, result);
+
+        boolean foundParagraphs = processParagraphs(element, result);
+
+        processLists(element, result);
+
+        processTables(element, result);
+
+        if (!foundParagraphs && result.length() < 200) {
+            processTextDivs(element, result);
+        }
+
+        if (result.length() < 100) {
+            String text = element.text();
+            if (!text.isEmpty()) {
+                result.append(text).append("\n");
+            }
+        }
+    }
+
+    private static void processHeadings(Element element, StringBuilder result) {
         for (int i = 1; i <= 6; i++) {
-            Pattern hPattern = Pattern.compile("<h" + i + "[^>]*>(.*?)</h" + i + ">", Pattern.DOTALL);
-            Matcher hMatcher = hPattern.matcher(cleanHtml);
-            while (hMatcher.find()) {
-                String heading = cleanText(hMatcher.group(1));
-                if (!heading.isEmpty() && !heading.trim().isEmpty()) {
-                    result.append(heading).append("\n");
+            Elements headings = element.select("h" + i);
+            for (Element heading : headings) {
+                String headingText = heading.text().trim();
+                if (!headingText.isEmpty()) {
+                    result.append(headingText).append("\n");
                     if (i <= 2) {
-                        result.append(String.valueOf(i == 1 ? '=' : '-').repeat(Math.min(heading.length(), 40))).append("\n");
+                        result.append(String.valueOf(i == 1 ? '=' : '-').repeat(Math.min(headingText.length(), 40))).append("\n");
                     }
                     result.append("\n");
                 }
             }
         }
-
-        Pattern pPattern = Pattern.compile("<p[^>]*>(.*?)</p>", Pattern.DOTALL);
-        Matcher pMatcher = pPattern.matcher(cleanHtml);
-        while (pMatcher.find()) {
-            String paragraph = cleanText(pMatcher.group(1));
-            if (!paragraph.isEmpty() && !paragraph.trim().isEmpty()) {
-                result.append(paragraph).append("\n\n");
-            }
-        }
-
-        extractLists(cleanHtml, result);
-        extractTables(cleanHtml, result);
-
-        if (result.length() < 200) {
-            Set<String> processedContents = new HashSet<>();
-            Pattern contentDivPattern = Pattern.compile("<div[^>]*class=[\"'][^\"']*(?:content|article|text|body)[^\"']*[\"'][^>]*>(.*?)</div>", Pattern.DOTALL);
-            Matcher contentDivMatcher = contentDivPattern.matcher(cleanHtml);
-
-            while (contentDivMatcher.find()) {
-                String divContent = contentDivMatcher.group(1);
-                if (!divContent.contains("<div")) {
-                    String cleaned = cleanText(divContent);
-                    if (!cleaned.isEmpty() && !cleaned.trim().isEmpty() && !processedContents.contains(cleaned)) {
-                        processedContents.add(cleaned);
-                        result.append(cleaned).append("\n\n");
-                    }
-                }
-            }
-
-            if (result.length() < 200) {
-                Pattern divPattern = Pattern.compile("<div[^>]*>(.*?)</div>", Pattern.DOTALL);
-                Matcher divMatcher = divPattern.matcher(cleanHtml);
-
-                while (divMatcher.find() && result.length() < 1000) {
-                    String divContent = divMatcher.group(1);
-                    if (!divContent.contains("<div")) {
-                        String cleaned = cleanText(divContent);
-                        if (!cleaned.isEmpty() && cleaned.trim().length() > 40 && !processedContents.contains(cleaned)) {
-                            processedContents.add(cleaned);
-                            result.append(cleaned).append("\n\n");
-                        }
-                    }
-                }
-            }
-        }
-
-        if (result.length() < 100) {
-            Pattern bodyPattern = Pattern.compile("<body[^>]*>(.*?)</body>", Pattern.DOTALL);
-            Matcher bodyMatcher = bodyPattern.matcher(html);
-            if (bodyMatcher.find()) {
-                String bodyContent = cleanText(bodyMatcher.group(1));
-                if (!bodyContent.isEmpty() && !bodyContent.trim().isEmpty()) {
-                    result.append(bodyContent);
-                }
-            }
-        }
-
-        String finalResult = result.toString().trim();
-
-        finalResult = finalResult.replaceAll("\n{3,}", "\n\n");
-
-        return finalResult;
     }
 
-    private static void extractLists(String html, StringBuilder result) {
-        Pattern ulPattern = Pattern.compile("<ul[^>]*>(.*?)</ul>", Pattern.DOTALL);
-        Matcher ulMatcher = ulPattern.matcher(html);
+    private static boolean processParagraphs(Element element, StringBuilder result) {
+        Elements paragraphs = element.select("p");
+        boolean foundContent = false;
 
-        while (ulMatcher.find()) {
-            String ulContent = ulMatcher.group(1);
+        for (Element paragraph : paragraphs) {
+            String paragraphText = paragraph.text().trim();
+            if (paragraphText.length() > 10) {
+                result.append(paragraphText).append("\n\n");
+                foundContent = true;
+            }
+        }
+
+        return foundContent;
+    }
+
+    private static void processLists(Element element, StringBuilder result) {
+        Elements unorderedLists = element.select("ul");
+        for (Element ul : unorderedLists) {
             result.append("\n");
-
-            Pattern liPattern = Pattern.compile("<li[^>]*>(.*?)</li>", Pattern.DOTALL);
-            Matcher liMatcher = liPattern.matcher(ulContent);
-
-            while (liMatcher.find()) {
-                String item = cleanText(liMatcher.group(1));
-                if (!item.isEmpty() && !item.trim().isEmpty()) {
-                    result.append("• ").append(item).append("\n");
+            Elements items = ul.select("li");
+            for (Element item : items) {
+                String itemText = item.text().trim();
+                if (!itemText.isEmpty()) {
+                    result.append("• ").append(itemText).append("\n");
                 }
             }
             result.append("\n");
         }
 
-        Pattern olPattern = Pattern.compile("<ol[^>]*>(.*?)</ol>", Pattern.DOTALL);
-        Matcher olMatcher = olPattern.matcher(html);
-
-        while (olMatcher.find()) {
-            String olContent = olMatcher.group(1);
+        Elements orderedLists = element.select("ol");
+        for (Element ol : orderedLists) {
             result.append("\n");
-
-            Pattern liPattern = Pattern.compile("<li[^>]*>(.*?)</li>", Pattern.DOTALL);
-            Matcher liMatcher = liPattern.matcher(olContent);
-
-            int itemNumber = 1;
-            while (liMatcher.find()) {
-                String item = cleanText(liMatcher.group(1));
-                if (!item.isEmpty() && !item.trim().isEmpty()) {
-                    result.append(itemNumber++).append(". ").append(item).append("\n");
+            Elements items = ol.select("li");
+            int i = 1;
+            for (Element item : items) {
+                String itemText = item.text().trim();
+                if (!itemText.isEmpty()) {
+                    result.append(i++).append(". ").append(itemText).append("\n");
                 }
             }
             result.append("\n");
         }
     }
 
-    private static void extractTables(String html, StringBuilder result) {
-        Pattern tablePattern = Pattern.compile("<table[^>]*>(.*?)</table>", Pattern.DOTALL);
-        Matcher tableMatcher = tablePattern.matcher(html);
-
-        while (tableMatcher.find()) {
-            String tableContent = tableMatcher.group(1);
+    private static void processTables(Element element, StringBuilder result) {
+        Elements tables = element.select("table");
+        for (Element table : tables) {
             result.append("\n");
+            Elements rows = table.select("tr");
 
-            Pattern trPattern = Pattern.compile("<tr[^>]*>(.*?)</tr>", Pattern.DOTALL);
-            Matcher trMatcher = trPattern.matcher(tableContent);
+            for (Element row : rows) {
+                Elements headerCells = row.select("th");
+                Elements dataCells = row.select("td");
 
-            while (trMatcher.find()) {
-                String rowContent = trMatcher.group(1);
-                StringBuilder rowText = new StringBuilder();
-
-                Pattern thPattern = Pattern.compile("<th[^>]*>(.*?)</th>", Pattern.DOTALL);
-                Matcher thMatcher = thPattern.matcher(rowContent);
-                boolean isHeader = thMatcher.find();
-
-                if (isHeader) {
-                    do {
-                        String cell = cleanText(thMatcher.group(1));
-                        rowText.append(cell).append("\t");
-                    } while (thMatcher.find());
-
-                    result.append(rowText.toString().trim()).append("\n");
-                    result.append(String.valueOf('-').repeat(Math.min(rowText.length(), 40))).append("\n");
-                } else {
-                    Pattern tdPattern = Pattern.compile("<td[^>]*>(.*?)</td>", Pattern.DOTALL);
-                    Matcher tdMatcher = tdPattern.matcher(rowContent);
-
-                    while (tdMatcher.find()) {
-                        String cell = cleanText(tdMatcher.group(1));
-                        rowText.append(cell).append("\t");
+                if (!headerCells.isEmpty()) {
+                    StringBuilder headerText = new StringBuilder();
+                    for (Element cell : headerCells) {
+                        headerText.append(cell.text().trim()).append("\t");
                     }
-
+                    String headerLine = headerText.toString().trim();
+                    result.append(headerLine).append("\n");
+                    result.append(String.valueOf('-').repeat(Math.min(headerLine.length(), 40))).append("\n");
+                }
+                else if (!dataCells.isEmpty()) {
+                    StringBuilder rowText = new StringBuilder();
+                    for (Element cell : dataCells) {
+                        rowText.append(cell.text().trim()).append("\t");
+                    }
                     result.append(rowText.toString().trim()).append("\n");
                 }
             }
-
             result.append("\n");
         }
     }
 
-    private static String cleanText(String text) {
-        String noTags = text.replaceAll("<[^>]+>", " ");
+    private static void processTextDivs(Element element, StringBuilder result) {
+        Set<String> processedContents = new HashSet<>();
+        Elements divs = element.select("div");
 
-        String decoded = noTags.replaceAll("&lt;", "<")
-                .replaceAll("&gt;", ">")
-                .replaceAll("&amp;", "&")
-                .replaceAll("&quot;", "\"")
-                .replaceAll("&apos;", "'")
-                .replaceAll("&nbsp;", " ")
-                .replaceAll("&#39;", "'")
-                .replaceAll("&#34;", "\"")
-                .replaceAll("&#160;", " ")
-                .replaceAll("&ldquo;", "\"")
-                .replaceAll("&rdquo;", "\"")
-                .replaceAll("&lsquo;", "'")
-                .replaceAll("&rsquo;", "'")
-                .replaceAll("&mdash;", "—")
-                .replaceAll("&ndash;", "-")
-                .replaceAll("&hellip;", "...");
-
-        return decoded.replaceAll("\\s+", " ").trim();
+        for (Element div : divs) {
+            if (div.select("p, h1, h2, h3, h4, h5, h6, ul, ol, table").isEmpty()) {
+                String divText = div.text().trim();
+                if (divText.length() > 40 && !processedContents.contains(divText)) {
+                    processedContents.add(divText);
+                    result.append(divText).append("\n\n");
+                }
+            }
+        }
     }
 
     public static String formatJson(String json) {
